fix(error-handling) fix commit, partially add add-cascade-deletes.xml